# indico-plugin-payment-sjtu

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  babel.cfg  pytest.ini  setup.cfg  setup.py
deploy/: docker-compose.yml  indico.env  indico.env.template  run_indico.sh  watch.sh
deploy/nginx/: Dockerfile
indico_payment_sjtu/: __init__.py  blueprint.py  controllers.py  monkey_patch.py  plugin.py  util.py  views.py
indico_payment_sjtu/templates/: event_payment_form.html  event_payment_invoice.html  invoice_list.html  transaction_details.html
indico_payment_sjtu/templates/display/: _registration_summary_blocks.html  refund_transaction.html  regform_display.html  registration_summary.html
indico_payment_sjtu/templates/emails/: registration_creation_to_registrant.html  registration_modification_to_registrant.html  registration_state_update_to_registrant.html
indico_payment_sjtu/templates/management/: _reglist.html  regform_reglist.html
indico_payment_sjtu/translations/de_DE/LC_MESSAGES/: messages.po
indico_payment_sjtu/translations/en_GB/LC_MESSAGES/: messages.po
indico_payment_sjtu/translations/es_ES/LC_MESSAGES/: messages.po
indico_payment_sjtu/translations/fr_FR/LC_MESSAGES/: messages.po
indico_payment_sjtu/translations/mn_MN/LC_MESSAGES/: messages.po
indico_payment_sjtu/translations/pl_PL/LC_MESSAGES/: messages.po
indico_payment_sjtu/translations/pt_BR/LC_MESSAGES/: messages.po
indico_payment_sjtu/translations/tr_TR/LC_MESSAGES/: messages.po
tests/: controllers_test.py  util_test.py
(+2 files in other folders)
