[metadata]
name = indico-plugin-payment-sjtu
version = 3.2
description = SJTU payments for Indico event registration fees
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/tc-imba/indico-plugin-payment-sjtu
license = MIT
author = tc-imba
author_email = liuyh970615@gmail.com
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.11
install_requires =
    indico>=3.2
    dict2xml>=1.7.3
    xmltodict>=0.13.0

[options.entry_points]
indico.plugins =
    payment_sjtu = indico_payment_sjtu.plugin:SJTUPaymentPlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
